--- a/my-day-planner-pro/package.json
+++ b/my-day-planner-pro/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
+    "react-calendar": "^5.1.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0"
   },
@@ -27,6 +28,7 @@
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
     "tailwindcss": "3.4.1",
-    "vite": "^6.2.0"
+    "vite": "^6.2.0",
+    "vite-plugin-pwa": "^1.0.0"
   }
 }
