--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-calendar-heatmap": "^1.10.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
-    "react-markdown": "^10.1.0"
+    "react-markdown": "^10.1.0",
+    "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
