--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "chart.js": "^4.4.9",
     "firebase": "^11.6.0",
     "lucide-react": "^0.487.0",
